--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -20,7 +20,8 @@ header{
 
 header h1{
     font-family: "Passion One", sans-serif;
-    font-size: 10vw;}
+    font-size: 10vw;
+   }
 
 header p{
     font-family: Arial, Helvetica, sans-serif;}
