--- a/desafios/desafio014 - Copia/estilos/media-querys.css
+++ b/desafios/desafio014 - Copia/estilos/media-querys.css
@@ -14,136 +14,99 @@ padding: 0;
 box-sizing: border-box;}
 
 body{
-background-color: rgba(69, 184, 199, 0.788);
-position: relative;
-width: 100vw;
-height: 100vh;}
+    background-color: aqua;
+    width: 100vw;
+    height: 100vh;
 
-#imagem{
-display: block;
-height: 250px;
-background: url(../cll.jpg);
-background-size: cover;
-background-position: center center;}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 main{
-width: 300px;
-overflow: hidden;
-position: absolute;
-top: 50%;
-left: 50%;
-background-color: white;
-border-radius: 10px;
-box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.521);
-transform: translate(-50% , -50%);}
+    background-color: white;
+    width: 320px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.349);
+}
+
+main>#imagem{
+    background: url(../cll.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    width: 100vw;
+    height: 30vh;
+}
 
 #login{
-display: block;
-padding: 20px;}
+    padding: 20px;
+}
+#formulario >h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
 
-#formulario{
-line-height: 1.5em;
-margin-bottom: 20px;}
-
-#formulario>h1{
-text-align: center;
-margin-bottom: 10px;}
-
-#formulario>p{
-text-align: justify;}
-
-
-form>p{
-    margin: 5px;}
+#formulario > p{
+    margin-bottom: 20px;
+    text-align: justify;
+    line-height: 1.5em;
+}
 
 .campo{
-    margin: 5px 0px;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(69, 184, 199, 0.788);
-    border-radius: 17px;}
-
-.campo label{
-    display: none;}
-
-.campo span{
-    height: 40px;
-    width: 40px;
-    padding: 1px 10px 0px 15px;}
+    background-color: aqua;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
 
 .campo input{
+    width: 100%;
+    height: 40px;
+    border-radius: 20px;
     border: 1px solid black;
     text-align: center;
-    height: 36px;
-    width: calc(100% - 50px);
-    border-radius: 13px;}
+}
+
+.campo label{
+    display: none;
+}
 
 #entar{
-    width: 100%;
-    background-color: rgb(18, 204, 126);
-    border: none;
     padding: 10px;
-    border-radius: 5px;
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(16, 177, 16);
+    margin-bottom: 5px;
     color: white;
-    font-weight: bold;}
-
-#entar:hover{
-    background-color: rgb(58, 223, 154);
-    text-decoration: underline;
-    color: white;}
+    font-weight: bold;
+}
 
 #esqueci{
-    width: 100%;
-    border: 5px solid rgb(0, 255, 149);
-    border: none;
     padding: 10px;
-    border-radius: 5px;
-    color: rgb(5, 177, 105);
-    font-weight: bold;}
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(213, 226, 213);
+    margin-bottom: 5px;
+    color: rgb(16, 177, 16);
+    font-weight: bold;
+}
+
+#entar:hover{
+    background-color: rgb(67, 230, 67);
+    text-decoration: underline;
+}
 
 #esqueci:hover{
-    background-color: rgb(58, 223, 154);
+    background-color: rgb(67, 230, 67);
+    color: white;
     text-decoration: underline;
-    color: white;}
-
-@media screen and (min-width:769px) and (max-width:1279px){
-    body{background-image: linear-gradient(rgb(19, 53, 58) ,rgba(69, 184, 199, 0.788));}
-
-    main{width: 90vw;
-        height: 60%;}
-
-    #imagem{
-        width: 30%;
-        height: 100%;
-        background: url(../tablet.jpg);
-        float: left;
-        background-size: cover;}
-
-    #login{
-        height: 100%;
-        margin-top: 50px;
-        width: 70%;
-        float: right;} }
-
-@media screen and (min-width:1280px){
-    body{background-image: linear-gradient(rgb(19, 53, 58) ,rgba(69, 184, 199, 0.788));}
-
-    main{width: 90vw;
-        height: 60%;}
-
-    #imagem{
-        width: 40%;
-        height: 100%;
-        background: url(../pc.jpg);
-        float: right;
-        background-size: cover;
-        background-position: center center;}
-
-    #login{
-        height: 100%;
-        margin-top: 4%;
-        display: block;
-        width: 50%;
-        float: left;}
 }
-            
